<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailTitle"
        android:layout_marginTop="14dp"
        android:text="@string/title_detail"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:textColor="@color/blue"
        android:layout_marginBottom="14dp"/>

    <ImageView
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:id="@+id/detailImage"
        android:padding="8dp"
        android:layout_gravity="center"
        android:src="@drawable/dki"
        android:scaleType="centerCrop"
        android:contentDescription="@string/thumbnaildetail" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/description_detail"
        android:padding="20dp"
        android:layout_gravity="center"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:id="@+id/detailDesc"/>

    <Button
        android:id="@+id/showMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_map"
        android:layout_gravity="center" />
</LinearLayout>
