<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:id="@+id/recCard"
        app:cardElevation="8dp"
        app:cardCornerRadius="16dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="5.5">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/recImage"
                android:layout_weight="4"
                android:scaleType="centerCrop"
                android:src="@drawable/dki"
                android:contentDescription="@string/thumbnail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:weightSum="2"
                android:layout_weight="1.5"
                android:background="@drawable/card_border"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:orientation="vertical"
                    tools:ignore="NestedWeights">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textSize="20sp"
                        android:maxLines="1"
                        android:textColor="@color/blue"
                        android:id="@+id/recTitle"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc"
                        android:textSize="18sp"
                        android:id="@+id/recDesc"
                        android:maxLines="0"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/recTitleSub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_2"
                        android:textAlignment="center"
                        android:textColor="@color/blue"
                        android:textSize="18sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>